--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -132,7 +131,7 @@
                 <hr>
                 <p>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
-            <form class="fields" action="submit_form.php" method="POST" id="contactForm" onsubmit="return validateForm()">
+            <form class="fields" id="contactForm">
                 <div class="form-field">
                     <p>Name</p>
                     <input name="name" type="text" id="name" class="form-input" placeholder="Name" />
@@ -146,7 +145,7 @@
                     <textarea name="message" name="message" id="message" class="form-input" placeholder="Type something"></textarea>
                 </div>
                 <div class="form-field">
-                    <button type="submit">
+                    <button type="submit" onclick="document.getElementById(h2).innerHTML='Hey text changed'">
                         Submit
                     </button>
                 </div>
@@ -174,5 +173,4 @@
             </div>
         </footer>
 </body>
-
 </html>
