--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
             </li>
         </ul>
     </nav>
+    <div id="nav-colapse">
+        <button onclick="navClose()" id="nav-close">Close &times;</button>
+        <a href="#">Home</a>
+        <a href="#">About me</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact me</a>
+    </div>
+    <button id="nav-open" onclick="navOpen()"><i class="fa-solid fa-bars fa-2xl"></i></button>
 </div>
+<div id="main">
     <div class="content">
         <img src="https://images.unsplash.com/photo-1454117096348-e4abbeba002c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="bg image" class="bg-img">
         <div class="text-container">
@@ -172,5 +181,6 @@
                 <p>© Copyright 2024, Made by <b>Rushit Suthar</b></p>
             </div>
         </footer>
+    </div>
 </body>
 </html>
