--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a href="#content">Home</a>
             </li>
             <li>
                 <a href="#about">About me</a>
             </li>
             <li>
-                <a href="#">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#">contact me</a>
+                <a href="#contact">contact me</a>
             </li>
         </ul>
     </nav>
     <div id="nav-colapse">
         <button onclick="navClose()" id="nav-close">Close &times;</button>
-        <a href="#">Home</a>
-        <a href="#">About me</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact me</a>
+        <a href="#content">Home</a>
+        <a href="#about">About me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact me</a>
     </div>
     <button id="nav-open" onclick="navOpen()"><i class="fa-solid fa-bars fa-2xl"></i></button>
 </div>
 <div id="main">
-    <div class="content">
+    <div class="content" id="content">
         <img src="https://images.unsplash.com/photo-1454117096348-e4abbeba002c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="bg image" class="bg-img">
         <div class="text-container">
             <h2>hey, i'm rushit suthar!</h2>
@@ -64,7 +64,7 @@
             <div class="side-logo"><i class="fa-brands fa-square-github fa-sm"></i></div>
         </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
         <div class="about-head">
             <h2>ABOUT ME</h2>
             <hr>
@@ -101,7 +101,7 @@
             <div class="skill">REACT</div>
         </div>
     </div>
-    <div class="projects">
+    <div class="projects" id="projects">
         <div class="proj-head">
             <h2>Some of my projects</h2>
             <hr>
@@ -132,7 +132,7 @@
             </article>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <img src="https://images.unsplash.com/photo-1454117096348-e4abbeba002c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="bg image" class="bg-img">
         <div class="contact-form">
             <div class="contact-head">
