--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <p>A Full Stack focused Developer building the Full stack Websites and Applications that leads to the success of the overall product</p>
         </div>
         <div class="side-menu">
-            <div class="side-logo"><i class="fa-brands fa-linkedin fa-sm"></i></div>
-            <div class="side-logo"><i class="fa-brands fa-square-instagram fa-sm"></i></div>
-            <div class="side-logo"><i class="fa-brands fa-facebook fa-sm"></i></div>
-            <div class="side-logo"><i class="fa-brands fa-twitter fa-sm"></i></div>
-            <div class="side-logo"><i class="fa-brands fa-square-github fa-sm"></i></div>
+            <div class="side-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5/?trk=public-profile-join-page"><i class="fa-brands fa-linkedin fa-sm"></i></a></div>
+            <div class="side-logo"><a href="https://www.instagram.com/r_s_____suthar"><i class="fa-brands fa-instagram fa-sm"></i></a></div>
+            <div class="side-logo"><a href="https://www.facebook.com/rushits3"><i class="fa-brands fa-facebook fa-sm"></i></a></div>
+            <div class="side-logo"><a href="https://twitter.com/r_s_____suthar"><i class="fa-brands fa-x-twitter fa-sm"></i></a></div>
+            <div class="side-logo"><a href="https://github.com/Rushit27042002"><i class="fa-brands fa-github fa-sm"></i></a></div>
         </div>
     </div>
     <div class="about" id="about">
@@ -106,30 +106,28 @@
             <h2>Some of my projects</h2>
             <hr>
         </div>
-        <div class="project-list">
-            <article>
-                <h2>Project-1</h2>
-                <div class="project">
-                    <div class="img-wrap"><img class="proj-img" src="img\post1.jpg" alt="bg_image"></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel enim et urna tristique pulvinar.</p>
+        <div class="iframe-list">
+            <div class="iframe-wrap">
+                <iframe class="proj-iframe" src="https://admin.cryptosimo.com/" frameborder="0"></iframe>
+                <div class="layer">
+                    <h2>CRYPTOSIMO - [Flutter Aplication]</h2>
+                    <p>A simple cryptotrading app made using Flutter for client. worked on UI UX side and published by me.</p>
                 </div>
-            </article>
-
-            <article>
-                <h2>Project-2</h2>
-                <div class="project">
-                    <div class="img-wrap"><img class="proj-img" src="img\merve-kalafat-yilmaz-QhmVECy_rFA-unsplash.jpg" alt="bg_image"></div>
-                    <p>Curabitur nec sem vel ligula scelerisque vestibulum. Integer vel elit ac purus tincidunt efficitur.</p>
+            </div>
+            <div class="iframe-wrap">
+                <iframe class="proj-iframe" src="https://medease-lake.vercel.app/" frameborder="0"></iframe>
+                <div class="layer">
+                    <h2>MEDEASE</h2>
+                    <p>Find Your Perfect Appointment with Ease: Discover a World of Trusted Doctors at MedEase!!!</p>
                 </div>
-            </article>
-
-            <article>
-                <h2>Project-3</h2>
-                <div class="project">
-                    <div class="img-wrap"><img class="proj-img" src="img\michael-hamments-19hhpmorArE-unsplash.jpg" alt="bg_image"></div>
-                    <p>Curabitur nec sem vel ligula scelerisque vestibulum. Integer vel elit ac purus tincidunt efficitur.</p>
+            </div>
+            <div class="iframe-wrap">
+                <iframe class="proj-iframe" src="https://snap-search-kohl.vercel.app/" frameborder="0"></iframe>
+                <div class="layer">
+                    <h2>SNAP-SEARCH</h2>
+                    <p> Explore, Discover, and Unveil the World Through Images!</p>
                 </div>
-            </article>
+            </div>
         </div>
     </div>
     <div class="contact" id="contact">
@@ -169,11 +167,11 @@
                 <div class="sec2">
                     <h2>SOCIAL</h2>
                     <div class="f-logo-list">
-                        <div class="f-logo"><i class="fa-brands fa-linkedin fa-2xl"></i></div>
-                        <div class="f-logo"><i class="fa-brands fa-square-instagram fa-2xl"></i></div>
-                        <div class="f-logo"><i class="fa-brands fa-facebook fa-2xl"></i></div>
-                        <div class="f-logo"><i class="fa-brands fa-twitter fa-2xl"></i></div>
-                        <div class="f-logo"><i class="fa-brands fa-square-github fa-2xl"></i></div>
+                        <div class="f-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5/?trk=public-profile-join-page"><i class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+                        <div class="f-logo"><a href="https://www.instagram.com/r_s_____suthar"><i class="fa-brands fa-square-instagram fa-2xl"></i></a></div>
+                        <div class="f-logo"><a href="https://www.facebook.com/rushits3"><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
+                        <div class="f-logo"><a href="https://twitter.com/r_s_____suthar"><i class="fa-brands fa-x-twitter fa-2xl"></i></a></div>
+                        <div class="f-logo"><a href="https://github.com/Rushit27042002"><i class="fa-brands fa-square-github fa-2xl"></i></a></div>
                     </div>
                 </div>
             </div>
