--- a/index.html
+++ b/index.html
@@ -109,24 +109,27 @@
         <div class="iframe-list">
             <div class="iframe-wrap">
                 <iframe class="proj-iframe" src="https://admin.cryptosimo.com/" frameborder="0"></iframe>
+                <a href="https://play.google.com/store/apps/details?id=com.klick.cryptosimo&hl=en_IN&gl=US">
                 <div class="layer">
                     <h2>CRYPTOSIMO - [Flutter Aplication]</h2>
                     <p>A simple cryptotrading app made using Flutter for client. worked on UI UX side and published by me.</p>
-                </div>
+                </div></a>
             </div>
             <div class="iframe-wrap">
                 <iframe class="proj-iframe" src="https://medease-lake.vercel.app/" frameborder="0"></iframe>
+                <a href="https://medease-lake.vercel.app/">
                 <div class="layer">
                     <h2>MEDEASE</h2>
                     <p>Find Your Perfect Appointment with Ease: Discover a World of Trusted Doctors at MedEase!!!</p>
-                </div>
+                </div></a>
             </div>
             <div class="iframe-wrap">
                 <iframe class="proj-iframe" src="https://snap-search-kohl.vercel.app/" frameborder="0"></iframe>
+                <a href="https://snap-search-kohl.vercel.app/">
                 <div class="layer">
                     <h2>SNAP-SEARCH</h2>
                     <p> Explore, Discover, and Unveil the World Through Images!</p>
-                </div>
+                </div></a>
             </div>
         </div>
     </div>
