--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <hr>
                 <p>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
-            <form class="fields" id="contactForm">
+            <form onsubmit="sendEmail(); reset(); return false;" class="fields" id="contactForm">
                 <div class="form-field">
                     <p>Name</p>
                     <input name="name" type="text" id="name" class="form-input" placeholder="Name" />
@@ -183,5 +183,6 @@
             </div>
         </footer>
     </div>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
