--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>A Full Stack focused Developer building the Full stack Websites and Applications that leads to the success of the overall product</p>
         </div>
         <div class="side-menu">
-            <div class="side-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5/?trk=public-profile-join-page"><i class="fa-brands fa-linkedin fa-sm"></i></a></div>
+            <div class="side-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5"><i class="fa-brands fa-linkedin fa-sm"></i></a></div>
             <div class="side-logo"><a href="https://www.instagram.com/r_s_____suthar"><i class="fa-brands fa-instagram fa-sm"></i></a></div>
             <div class="side-logo"><a href="https://www.facebook.com/rushits3"><i class="fa-brands fa-facebook fa-sm"></i></a></div>
             <div class="side-logo"><a href="https://twitter.com/r_s_____suthar"><i class="fa-brands fa-x-twitter fa-sm"></i></a></div>
