--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="text-container">
             <h2>hey, i'm rushit suthar!</h2>
             <p>A Full Stack focused Developer building the Full stack Websites and Applications that leads to the success of the overall product</p>
+            <button class="cv-btn">Download CV</button>
         </div>
         <div class="side-menu">
             <div class="side-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5"><i class="fa-brands fa-linkedin fa-sm"></i></a></div>
@@ -141,25 +142,27 @@
                 <hr>
                 <p>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</p>
             </div>
-            <form onsubmit="sendEmail(); reset(); return false;" class="fields" id="contactForm">
+            <form class="fields" id="contactForm">
                 <div class="form-field">
                     <p>Name</p>
-                    <input name="name" type="text" id="name" class="form-input" placeholder="Name" />
+                    <input name="name" type="text" id="name" class="form-input" placeholder="Name" required />
                 </div>
                 <div class="form-field">
                     <p>Email</p>
-                    <input name="email" type="email" id="email" class="form-input" placeholder="Email Address" />
+                    <input name="email" type="email" id="email" class="form-input" placeholder="Email Address" required />
                 </div>
                 <div class="form-field">
                     <p>Message</p>
-                    <textarea name="message" name="message" id="message" class="form-input" placeholder="Type something"></textarea>
+                    <textarea name="message" id="message" class="form-input" placeholder="Type something" required></textarea>
                 </div>
                 <div class="form-field">
-                    <button type="submit" onclick="document.getElementById(h2).innerHTML='Hey text changed'">
+                    <button class="submit-btn" type="submit">
                         Submit
                     </button>
                 </div>
             </form>
+            
+            <h2 id="responseMessage"></h2>
         </div>
         <footer>
             <div class="personal">
@@ -183,6 +186,63 @@
             </div>
         </footer>
     </div>
+    <script>
+document.getElementById("contactForm").addEventListener("submit", async function (event) {
+    event.preventDefault(); // Prevent default form submission
+
+    // Get form data
+    const name = document.getElementById("name").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const message = document.getElementById("message").value.trim();
+    const responseMessage = document.getElementById("responseMessage");
+    const submitBtn = document.querySelector(".submit-btn");
+
+    // Validate the form data
+    if (!name || !email || !message) {
+        responseMessage.innerText = "Please fill out all fields.";
+        responseMessage.style.color = "red";
+        return;
+    }
+
+    // Prepare the data to send
+    const formData = { name, email, message };
+
+    // Disable the submit button and show loading message
+    submitBtn.setAttribute("disabled", "true");
+    responseMessage.innerText = "Sending email...";
+    responseMessage.style.color = "blue";
+
+    try {
+        // Make a POST request to the Sails.js API
+        const response = await fetch("https://nodemail-production.up.railway.app/send-email", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(formData)
+        });
+
+        const data = await response.json(); // Parse the response as JSON
+
+        if (!response.ok) {
+            throw new Error(data.message || "Error sending email");
+        }
+
+        // Success message
+        responseMessage.innerText = "Email sent successfully!";
+        responseMessage.style.color = "green";
+
+        // Clear form fields (optional)
+        document.getElementById("contactForm").reset();
+    } catch (error) {
+        console.error("Error:", error);
+        responseMessage.innerText = error.message || "An error occurred. Please try again.";
+        responseMessage.style.color = "red";
+    } finally {
+        // Re-enable the submit button after request completion
+        submitBtn.removeAttribute("disabled");
+    }
+});
+    </script>
+    
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
