--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@ document.getElementById("contactForm").addEventListener("submit", async function
         const response = await fetch("https://nodemail-production.up.railway.app/send-email", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(formData)
+            body: JSON.stringify(formData),
+            mode: 'cors'
         });
 
         const data = await response.json(); // Parse the response as JSON
