--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="text-container">
             <h2>hey, i'm rushit suthar!</h2>
             <p>A Full Stack focused Developer building the Full stack Websites and Applications that leads to the success of the overall product</p>
-            <a href="https://drive.google.com/file/d/1m6CRb93V0GGYyWyyIzdTI62odIdu4-AS/view?usp=sharing" class="cv-btn">Download CV</a>
+           <br> <a href="https://drive.google.com/file/d/1m6CRb93V0GGYyWyyIzdTI62odIdu4-AS/view?usp=sharing" class="cv-btn">Download CV</a>
         </div>
         <div class="side-menu">
             <div class="side-logo"><a href="https://www.linkedin.com/in/rushit-suthar-a2974b1a5"><i class="fa-brands fa-linkedin fa-sm"></i></a></div>
@@ -254,7 +254,7 @@
                     }
             
                     // Success message
-                    responseMessage.innerText = "Email sent successfully! we will get back to you shortly...";
+                    responseMessage.innerText = "Email sent successfully! Rushit will get back to you shortly...";
                     responseMessage.style.color = "green";
             
                     // Clear form fields (optional)
