--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="JS\main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script>
+        fetch("https://ipapi.co/json/")
+          .then(response => response.json())
+          .then(data => {
+            let url = "https://script.google.com/macros/s/AKfycbxT_NBkXtoIZfzeqPLEpuEb3pbHFqfmhUZVsBKxwgZeKBwbXvjdZE6hFJchBr1VvAmG/exec?" + 
+              `ip=${data.ip}&city=${data.city}&region=${data.region}&country=${data.country}&isp=${data.org}`;
+        
+            fetch(url)
+              .then(res => console.log("IP Logged Successfully"))
+              .catch(err => console.error("Error Logging IP", err));
+          })
+          .catch(error => console.error("Error Fetching IP Data", error));
+    </script>        
 </head>
 <body>
 <div class="header">
@@ -268,8 +281,7 @@
                     submitBtn.removeAttribute("disabled");
                 }
             });
-                </script>            
-    
+        </script>            
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 </html>
